--- a/graficos/package.json
+++ b/graficos/package.json
@@ -1,5 +1,6 @@
 {
   "name": "graficos",
+  "homepage": "https://gustacamara.github.io/algoritmos-de-ordenacao",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dist": "^0.1.2",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.515.0",
     "pnpm": "^10.12.1",
     "react": "^19.1.0",
